--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".DataRemote.DataRemote"></activity>
+        <activity android:name=".DataRemote.DataRemote"/>
+        <activity android:name=".CameraRemote.CameraRemote"/>
 
     </application>
 <uses-permission android:name="android.permission.BLUETOOTH"/>
